--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,7 @@ a {
 
   display: inline-block;
   width: 18px;
-  height: 18px;
+  height: 9px;
 
   border-radius: 50%;
   cursor: pointer;
@@ -210,8 +210,8 @@ a {
   content: "";
 
   position: absolute;
-  top: 8px;
-  left: 8px;
+  top: 4px;
+  left: 9px;
   z-index: 1;
 
   width: 18px;
@@ -305,12 +305,13 @@ a {
           justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  padding-bottom: 80px;
+  padding-bottom: 60px;
   border-bottom: 2px solid #eeeeee;
 }
 
 .products-list li{
   margin-right: 60px;
+  margin-bottom: 20px;
   min-width: 300px;
 }
 
@@ -373,12 +374,16 @@ a {
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
-          justify-content: space-between;
+
   margin-bottom: 53px;
+  margin-left: 0;
 }
 
 .studio-inform_article {
-  width: 660px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 660px;
+          flex: 0 0 660px;
+  margin-right: 20px;
   margin-top: 78px;
 }
 
@@ -435,6 +440,7 @@ a {
   background-repeat: no-repeat;
   margin-top: 40px;
   margin-right: 30px;
+  margin-left: auto;
 }
 
 .studio-inform_container {
@@ -449,11 +455,11 @@ a {
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-top: 45px;
-
 }
 
 .statistics-info li {
   width: 100px;
+  margin-right: 5px;
 }
 
 .statistics-info_value {
@@ -532,7 +538,6 @@ a {
   position: absolute;
   top: 50px;
   left: 95px;
-
   background-color: #ffffff;
   width: 269px;
   height: 258px;
@@ -546,12 +551,24 @@ a {
   margin: 0;
 }
 
+.contacts_text {
+  font-size: 16px;
+  line-height: 18px;
+  margin-top: 23px;
+  margin-bottom: 12px;
+}
+
+.contacts_tel {
+  margin-bottom: 37px;
+}
+
 .contacts-detail_btn {
   width: 219px;
 }
 
 .modal-feedback {
   position: fixed;
+  z-index: 200;
   left: 200px;
   top: 10px;
   background-color: #ffffff;
@@ -656,6 +673,13 @@ a {
 .modal_text:focus {
   border: 2px solid #000000;
   opacity: 1;
+}
+
+.modal_name:invalid,
+.modal_email:invalid,
+.modal_text:invalid {
+  color: #e74246;
+  border-color: #e74246;
 }
 
 .modal_btn {
@@ -885,7 +909,18 @@ a {
 .filters_features {
   list-style: none;
   padding: 0;
-  margin-bottom: 50px;
+}
+
+.filter_cost {
+  margin-bottom: 58px;
+}
+
+.filters_grid {
+  margin-bottom: 48px;
+}
+
+.filters_features {
+  margin-bottom: 48px;
 }
 
 .filters_grid li,
@@ -939,7 +974,7 @@ a {
 }
 
 .checkbox-label {
-  margin-left: 12px;
+  margin-left: 7px;
   color: #283136;
 }
 
@@ -969,24 +1004,26 @@ a {
   background-position: 0 0;
 }
 
-.radio-custom:hover,
-.checkbox-custom:hover {
-  opacity: 1;
-}
 
  .radio-custom:hover + .radio-label,
  .checkbox-custom:hover + .checkbox-label {
   color: #000000;
 }
 
-.radio-label:hover,
-.checkbox-label:hover {
+.grid_label:hover .radio-label,
+.filters_label:hover .checkbox-label  {
   color: #000000;
 }
 
+.grid_label:hover .radio-custom,
+.filters_label:hover .checkbox-custom {
+  opacity: 1;
+}
 
 .filters-form_btn {
   color: #000000;
+  font-size: 16px;
+  line-height: 18px;
   font-weight: 700;
   text-transform: uppercase;
   width: 260px;
@@ -1030,6 +1067,12 @@ border: none;
   margin: 0;
   }
 
+.templates {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 760px;
+          flex: 0 0 760px;
+}
+
 .templates-sorting,
 .sorting-breadcrambs {
   display: -webkit-box;
@@ -1058,7 +1101,6 @@ border: none;
 .sorting-breadcrambs li {
   margin-left: 18px;
 }
-
 
 .templates-sorting a {
   font-size: 14px;
@@ -1103,6 +1145,7 @@ border: none;
   position: relative;
   height: 614px;
   width: 360px;
+
 }
 
 .templates-items_decoration {
@@ -1116,11 +1159,10 @@ border: none;
 .templates-items_hover {
   position: absolute;
   top: 385px;
-
   width: 240px;
-  height: 154px;
+  /*height: 154px;*/
   background-color: #eeeeee;
-  padding-right: 60px;
+  padding-right: auto;
   padding-left: 60px;
   padding-top: 33px;
   padding-bottom: 43px;
@@ -1129,8 +1171,21 @@ border: none;
   display: none;
 }
 
+.templates-items_hover p {
+  word-wrap: break-word;
+}
+
 .templates-items_hover h4 {
   margin: 0;
+}
+
+.hover_link,
+.hover_link:hover,
+.hover_link:focus,
+.hover_link:active {
+  font-size: 18px;
+  line-height: 30px;
+  color: #000000;
 }
 
 .templates-items_btn {
@@ -1138,13 +1193,13 @@ border: none;
   margin-left: 20px;
 }
 
-.templates-items li:hover .templates-items_hover,
-.templates-items li:focus .templates-items_hover {
+.templates-items_link:hover + .templates-items_hover,
+.templates-items_link:focus + .templates-items_hover {
   position: absolute;
   top: 385px;
 
   width: 240px;
-  height: 154px;
+
   background-color: #eeeeee;
   padding-right: 60px;
   padding-left: 60px;
@@ -1153,6 +1208,13 @@ border: none;
   text-align: center;
 
   display: block;
+}
+
+.templates-items_hover:hover {
+  display: block;
+  padding-right: 60px;
+  padding-left: 60px;
+  width: 240px;
 }
 
 .templates-items li:hover .templates-items_decoration {
