--- a/css/style.css
+++ b/css/style.css
@@ -486,7 +486,7 @@ a {
   list-style: none;
   margin: 0;
   padding: 0 30px;
-  min-height: 180px;
+  height: 180px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
